- Fixed another stats problem, reported by Angrywolf (#0001163)
- Rewrote the usermode module interface to be more stable and consistent with other
  module functions. New functions are UmodeAdd and UmodeDel (backwards compatibility
  is available for the old functions).
- Fixed a bug in the snomask and umode system dealing with removing flags
- Added two module functions ModuleGetOptions and ModuleSetOptions to retrieve/toggle
  module options
- Fixed a bug effecting +k/+L where you could /mode #chan +k test, /mode #chan +k test
  and each time it would send a mode change (#0001170) reported by Airnike.
- A few documentation updates/fixes
- 005 CHANMODES= set back to original value before extcmode merge
- made some functions in channel.c non-static so module coders
  can use them (they are not defined in the header files [yet] however).
- fixed 2 minor oob write issues
- Fixed a bug with stats l/L
- Updated example.conf with a more strict default oper-only-stats.
- Made '/stats S' and '/stats Z' oper only again (always).
- Hopefully fixed incoming/outgoing rate in /stats T. Only the stats of the first
  listener was counted instead of the total. This also explains why on some (many?)
  ircd configurations it always showed 0.00 kb/s and why HTM (high traffic mode)
  was never kicking in.
- A few doc updates (example.conf).
- Added EOS command (End Of Sync), which is sent between servers after a server has
  succesfully synced (after introducing of channels, users, etc). This way we can
  easily distinct between linked servers and a connecting server.
  This is needed / very helpful for: snomask +F, new +f anti flood system, prolly
  other things as well. Services don't support this command, but it's not
  needed atm since +F/+f both ignore U lines.
- Internal: changed 2 MyMalloc's to MyMallocEx (mem zerofill).. nothing was currently
  affected by this but it's easy to forget if you add new stuff.
- Fixed minor /WALLOPS bug reported by Praetorian_ (#0001195).