@@ -747,6 +747,11 @@ set {
 		period 60s;
 	};
 
+	/* Anti flood protection */
+	anti-flood {
+		nick-flood 3:60;	/* 3 nickchanges per 60 seconds (the default) */
+	};
+
 };
 
 /*
